took the form out of test mode and added some meta tags to form and home page. also changed min cost from 5 to 8.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+     <meta name="description" content="Total Town Car Service offers reliable and affordable taxi, limo, and MSP services in Minneapolis.">
+    <meta name="keywords" content="taxi, total town car service, msp, limo, Minneapolis, airport taxi, transportation service">
     <title>Total Town Car Service</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -218,7 +218,7 @@
                         <del>Short Notice</del>
                     </li>
                 </ul>
-                <a href="form.html" class="btn btn-dark btn-block shadow rounded-pill">Get Estimation</a>
+                <a href="pricing.html" class="btn btn-dark btn-block shadow rounded-pill">Get Estimation</a>
             </div>
         </div>
         <!--  END -->
@@ -249,7 +249,7 @@
                         <i class="fa fa-check mr-2 text-primary"></i>  Professional Chauffeurs
                     </li>
                 </ul>
-                <a href="form.html" class="btn btn-dark btn-block shadow rounded-pill">Get Estimation</a>
+                <a href="pricing.html" class="btn btn-dark btn-block shadow rounded-pill">Get Estimation</a>
             </div>
         </div>
         <!-- END -->
@@ -284,7 +284,7 @@
                         <del>Short Notice</del>
                     </li>
                 </ul>
-                <a href="form.html" class="btn btn-dark btn-block shadow rounded-pill">Get Estimation</a>
+                <a href="pricing.html" class="btn btn-dark btn-block shadow rounded-pill">Get Estimation</a>
             </div>
         </div>
     </div>
