--- a/pricing.html
+++ b/pricing.html
@@ -13,7 +13,13 @@
 
     <title>TTCS</title>
 </head>
-<body>
+<body style="
+    background: url('./public/css/images/price.png') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+">
   <header>
     <div id="preloader">
       <div class="loader"></div>
@@ -254,7 +260,7 @@
               </defs>
               </svg>
           </button>
-          <a role="button" class="formbold-btn formbtn" id="Book-now" style="display: none;" href="form.html">
+          <a role="button" class="formbold-btn formbtn" id="Book-now" style="display: none; text-decoration: none;" href="form.html">
             Book Now
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
             <g clip-path="url(#clip0_1675_1807)">
