changed the form page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-     <meta name="description" content="Total Town Car Service offers reliable and affordable taxi, limo, and MSP services in Minneapolis.">
-    <meta name="keywords" content="taxi, total town car service, msp, limo, Minneapolis, airport taxi, transportation service">
+    <meta name="description"
+        content="Total Town Car Service offers reliable and affordable taxi, limo, and MSP services in Minneapolis.">
+    <meta name="keywords"
+        content="taxi, total town car service, msp, limo, Minneapolis, airport taxi, transportation service">
     <title>Total Town Car Service</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -38,7 +40,8 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link text-dark active" id="textcolor" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link text-dark active" id="textcolor" aria-current="page"
+                            href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light text-center" href="form.html">Book Now</a>
@@ -156,18 +159,28 @@
                 <div class="col-xl-4 col-lg-5">
                     <div class="featured-text text-center text-lg-left">
                         <h4>Events</h4>
-                        <p class="text-black-50 mb-0">We provide transportation to big events, including concerts, sporting events, conferences, and festivals. Our range of vehicle types and experienced drivers ensure a safe and timely arrival. You can rely on us to enhance your event experience.</p>
+                        <p class="text-black-50 mb-0">We provide transportation to big events, including concerts,
+                            sporting events, conferences, and festivals. Our range of vehicle types and experienced
+                            drivers ensure a safe and timely arrival. You can rely on us to enhance your event
+                            experience.</p>
                     </div>
                 </div>
             </div>
             <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="public/css/images/nightcity.jpeg" style="height: 100%;" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid" src="public/css/images/nightcity.jpeg"
+                        style="height: 100%;" alt="..." /></div>
                 <div class="col-lg-6">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <h4 class="text-white">Hours</h4>
-                                <p class="mb-0 text-white-50">Our company is committed to providing exceptional service to our clients, and that means being available whenever they need us. We understand that travel plans can change at a moment's notice, which is why we offer around-the-clock availability. Our team is at your disposal 24 hours a day, 7 days a week, and we are pleased to provide our services at any hour. Whether you need transportation to the airport in the early morning or a ride home late at night, you can count on us to be available whenever you need us.</p>
+                                <p class="mb-0 text-white-50">Our company is committed to providing exceptional service
+                                    to our clients, and that means being available whenever they need us. We understand
+                                    that travel plans can change at a moment's notice, which is why we offer
+                                    around-the-clock availability. Our team is at your disposal 24 hours a day, 7 days a
+                                    week, and we are pleased to provide our services at any hour. Whether you need
+                                    transportation to the airport in the early morning or a ride home late at night, you
+                                    can count on us to be available whenever you need us.</p>
                                 <hr class="d-none d-lg-block mb-0 ms-0" />
                             </div>
                         </div>
@@ -175,13 +188,17 @@
                 </div>
             </div>
             <div class="row gx-0 justify-content-center">
-                <div class="col-lg-6"><img class="img-fluid" src="public/css/images/plane.jpeg" style="height: 100%;" alt="..." /></div>
+                <div class="col-lg-6"><img class="img-fluid" src="public/css/images/plane.jpeg" style="height: 100%;"
+                        alt="..." /></div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="bg-black text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
                                 <h4 class="text-white">Airport</h4>
-                                <p class="mb-0 text-white-50">MN Black Car Service offers various transportation services, including airport car service, taxi service, and limo service, that cater to the Twin Cities and surrounding areas. They are available 24/7 and offer a range of vehicles to choose from, including town cars and different fleet types.</p>
+                                <p class="mb-0 text-white-50">MN Black Car Service offers various transportation
+                                    services, including airport car service, taxi service, and limo service, that cater
+                                    to the Twin Cities and surrounding areas. They are available 24/7 and offer a range
+                                    of vehicles to choose from, including town cars and different fleet types.</p>
                                 <hr class="d-none d-lg-block mb-0 me-0" />
                             </div>
                         </div>
@@ -246,7 +263,7 @@
                         <i class="fa fa-check mr-2 text-primary"></i> Pre-booked and Scheduled Rides
                     </li>
                     <li class="mb-3">
-                        <i class="fa fa-check mr-2 text-primary"></i>  Professional Chauffeurs
+                        <i class="fa fa-check mr-2 text-primary"></i> Professional Chauffeurs
                     </li>
                 </ul>
                 <a href="pricing.html" class="btn btn-dark btn-block shadow rounded-pill">Get Estimation</a>
@@ -325,7 +342,7 @@
                             <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email is not valid.
                             </div>
                             <!-- Submit success message-->
-                       
+
                             <div class="d-none" id="submitSuccessMessage">
                                 <div class="text-center mb-3 mt-2 text-white">
                                     <div class="fw-bolder">Form submission successful!</div>
@@ -347,7 +364,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="public/js/scripts.js"></script>
     <script src="public/js/nav.js"></script>
-     <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
+    <!-- <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script> -->
 </body>
 
 </html>
