--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
   </div>
 </div>
   <!--  -->
-  <section class="about-section">
+  <section class="aabout-section">
     <div class="about-image">
         <img src="./public/css/images/1000324083.jpg" alt="About Image">
     </div>
@@ -152,7 +152,7 @@
       </div>
       </section>
 
-      <section class="about-section">
+      <section class="aabout-section">
         <div class="about-content">
             <h2>Why Choose Us?</h2>
             <p>TTC LLC also customize its transportation services to accommodate your particular requirements.</p>
